added new material and guides

--- a/Exercises/pytorch_gpu_training_part2.ipynb
+++ b/Exercises/pytorch_gpu_training_part2.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Exercise Part 2: Requesting GPU Resources and Running PyTorch\n",
-    "In this part, we will demonstrate how to request GPU resources on the Discovery Cluster using SLURM and run your PyTorch training script or notebook on the GPU."
+    "In this part, we will demonstrate how to request GPU resources on the Explorer Cluster using SLURM and run your PyTorch training script or notebook on the GPU."
    ]
   },
   {
@@ -88,7 +88,7 @@
    "id": "2cd36d15",
    "metadata": {},
    "source": [
-    "These commands will allow you to request GPU resources for running your PyTorch models on the Discovery Cluster."
+    "These commands will allow you to request GPU resources for running your PyTorch models on the Explorer Cluster."
    ]
   }
  ],
